# backend/cmd/api/routes/handler.go
@@ -21,6 +21,7 @@ type RouteHandler struct {
 	settingsDB    db.SettingsDB
 	treasuryDB    db.TreasuryDB
 	budgetDB      db.BudgetDB
+	categoryDB    db.CategoryDB
 
 	// Auth
 	authMiddleware auth.Middleware
@@ -47,6 +48,7 @@ func NewRouteHandler(conf *config.Config, dbPacket db.DatabasePacket, authPacket
 		settingsDB:    dbPacket.SettingsDB,
 		treasuryDB:    dbPacket.TreasuryDB,
 		budgetDB:      dbPacket.BudgetDB,
+		categoryDB:    dbPacket.CategoryDB,
 
 		authMiddleware: authPacket.AuthMiddleware,
 		tokenVerifier:  authPacket.TokenVerifier,
@@ -81,6 +83,8 @@ func (rh *RouteHandler) ApplyRoutes(r *gin.Engine) {
 	api.GET("/expenses/:id/receipts", rh.GetExpenseReceipts)
 	api.GET("/receipts/:id", rh.GetReceiptByID)
 	api.GET("/budgets/allocations", rh.GetMonthlyBudgetAllocations)
+	api.GET("/categories", rh.GetCategories)
+	api.GET("/categories/:name", rh.GetCategoryByName)
 	api.GET("/settings/organization-name", rh.GetOrganizationName)
 	api.GET("/settings/total-funds-raised", rh.GetTotalFundsRaised)
 
@@ -115,4 +119,7 @@ func (rh *RouteHandler) ApplyRoutes(r *gin.Engine) {
 	api.POST("/budgets/allocations", rh.authMiddleware.Handle, rh.CreateMonthlyBudgetAllocation)
 	api.PUT("/budgets/allocations/:id", rh.authMiddleware.Handle, rh.UpdateMonthlyBudgetAllocation)
 	api.DELETE("/budgets/allocations/:id", rh.authMiddleware.Handle, rh.DeleteMonthlyBudgetAllocation)
+	api.POST("/categories", rh.authMiddleware.Handle, rh.CreateCategory)
+	api.PUT("/categories/:name", rh.authMiddleware.Handle, rh.UpdateCategory)
+	api.DELETE("/categories/:name", rh.authMiddleware.Handle, rh.DeleteCategory)
 }
